--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -31,12 +31,5 @@
       "customAuth": false
     }
   },
-  "storage": {
-    "Lampadatable": {
-      "service": "DynamoDB",
-      "serviceType": "imported",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": []
-    }
-  }
+  "storage": {}
 }
