--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -4,7 +4,16 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda",
-      "dependsOn": []
+      "dependsOn": [
+        {
+          "category": "storage",
+          "resourceName": "dynamob9a364d2",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
+        }
+      ]
     }
   },
   "api": {
